sorted card loading scroll jump on desktop sorted fixed scroll lock on mobile added new icons to database and generating new jwt certificates on every instance initialization

--- a/SymfonyReact/assets/css/App.css
+++ b/SymfonyReact/assets/css/App.css
@@ -55,8 +55,11 @@
      margin-bottom: 1%;
 }
 
+.filter-button {
+    margin-right: 100%;
+}
  .card-filter-box {
-    position: fixed;
+    /* position: fixed; */
     z-index: 1;
     height: auto;
     width: auto;
@@ -76,6 +79,7 @@
 
  .card-filter-bar-container {
     position: absolute;
+    z-index: 1;
 }
 
  .card-sensor-type-display-name {
